--- a/src/automizy.css
+++ b/src/automizy.css
@@ -27,3 +27,4 @@
 @import url("styles/columnContent.css");
 @import url("styles/mockup.css");
 @import url("styles/list.css");
+@import url("styles/content.css");
