--- a/src/styles/popover.css
+++ b/src/styles/popover.css
@@ -59,8 +59,10 @@
 
 .automizy-popover-title {
     text-align: left;
-    padding: 8px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    padding: 16px 14px 8px 14px;
+    font-size: 14px;
+    font-weight: bold;
+    /* border-bottom: 1px solid rgba(0, 0, 0, 0.2); */
 }
 
 .automizy-popover-title:empty {
@@ -69,12 +71,12 @@
 
 .automizy-popover-content {
     text-align: left;
-    padding: 8px;
+    padding: 14px;
 }
 
 .automizy-popover-buttons {
     text-align: right;
-    padding: 8px;
+    padding: 14px;
     border-top: 1px solid rgba(0, 0, 0, 0.2);
 }
 
